# digits

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: deploy.yml
src/: guess.rs  lib.rs  main.rs
src/guess/: mod.rs  strategy.rs
src/primes/: known.rs  mod.rs
web/: Cargo.toml  Makefile  index.html
web/src/: app.rs  cache.rs  input_form.rs  main.rs  results.rs  style.css
