[package]
name = "digits-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
digits = { path = "../../digits" }
dioxus = "0.3"
dioxus-router = { version = "0.3.0", features = ["web"] }
dioxus-web = "0.3"
log = "0.4.17"
wasm-logger = "0.2.0"
